# django-admin-select-columns

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
django_admin_select_columns/: apps.py  mixins.py  models.py
django_admin_select_columns/migrations/: 0001_initial.py
django_admin_select_columns/templates/admin/: change_list.html
django_admin_select_columns/templates/select_columns/: select_columns.html
my_app/: admin.py  apps.py  models.py
my_app/migrations/: 0001_initial.py
my_project/: settings.py
