[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-select-columns"
version = "1.0.2"
requires-python = ">=3.7"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "Dynamically select columns in django admin changelist view with persistence"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["Django"]

[project.optional-dependencies]
pre-commit = ["pre-commit", "django-types"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/django-admin-select-columns"
Issues = "https://github.com/sandbox-pokhara/django-admin-select-columns/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"django_admin_select_columns" = "django_admin_select_columns"

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true
skip = ["migrations"]

[tool.black]
line-length = 79
preview = true
enable-unstable-feature = ["string_processing"]
force-exclude = '/(migrations)/'

[tool.pyright]
venvPath = "."
venv = "venv"
include = ["django_admin_select_columns", "manage.py", "my_app", "my_project"]
typeCheckingMode = "strict"
